Kubernetes/MongoDB-API.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-api
  template:
    metadata:
      labels:
        app: mongo-api
    spec:
      containers:
      - name: mongo-api
        image: localhost:5000/mongo-api-v1.3
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: api-configmap
          subPath: appsettings.json
      volumes: 
      - name: api-configmap
        configMap:
          name: api-mongo-configmap
