Kubernetes/mongoDB-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
  labels:
    db: mongodb
spec:
  containers:
    - name: mongodb
      image: localhost:5000/mongo
      ports:
        - containerPort: 27017
