Kubernetes/mongoDB.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mongodb
  template:
    metadata:
      labels:
        db: mongodb
    spec:
      containers:
      - name: mongodb
        image: localhost:5000/mongo
        ports:
          - containerPort: 27017
        volumeMounts:
        - mountPath: /data/db
          name: storage-pv
      volumes:
        - name: storage-pv
          persistentVolumeClaim:
            claimName: storage-pvc
