Kubernetes/mongoAPI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-api-service
spec:
  selector:
    app: mongo-api
  ports:
  - port: 5004
    targetPort: 5004
  type: LoadBalancer
