Kubernetes/Ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: mongo-ingress
spec:
  rules:
  - host: mongodb.io
    http:
      paths:
      - backend:
          serviceName: mongodb-service
          servicePort: 27017
        path: /
